[gd_scene load_steps=3 format=3 uid="uid://b4gllti557ki5"]

[ext_resource type="Script" path="res://scenes/config/perfil/perfil.gd" id="1_h7kfx"]
[ext_resource type="Texture2D" uid="uid://07rgbfnd20i2" path="res://scenes/config/perfil/default.png" id="2_8e8ti"]

[node name="Perfil" type="VBoxContainer"]
size_flags_horizontal = 3
script = ExtResource("1_h7kfx")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Tu perfil:"

[node name="Photo" type="TextureRect" parent="."]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "Haz clic para cambiar la foto de perfil"
texture = ExtResource("2_8e8ti")
expand_mode = 1
stretch_mode = 5

[node name="Name" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
placeholder_text = "Introduce tu nombre"
alignment = 1

[node name="Color" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Color"]
layout_mode = 2
text = "Color:"

[node name="ColorPicker" type="ColorPickerButton" parent="Color"]
layout_mode = 2
text = "color"
color = Color(1, 1, 1, 1)
edit_alpha = false

[node name="Randomize" type="Button" parent="Color"]
custom_minimum_size = Vector2(31, 0)
layout_mode = 2
tooltip_text = "Escoger un color aleatorio"
text = "R"

[connection signal="gui_input" from="Photo" to="." method="_on_photo_gui_input"]
[connection signal="text_submitted" from="Name" to="." method="_on_name_text_submitted"]
[connection signal="color_changed" from="Color/ColorPicker" to="." method="_on_color_picker_color_changed"]
[connection signal="pressed" from="Color/Randomize" to="." method="_on_randomize_pressed"]
